<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="if418028.myfinalapp.ui.pariwisata.PariwisataFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_pariwisata" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="if418028.myfinalapp.ui.ecommarce.EcommarceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_ecommarce" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="if418028.myfinalapp.ui.akunt.AkuntFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_akunt" />
</navigation>